Fixed project section spacing for tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -524,7 +524,7 @@ button:hover, button:focus {
     .projects-container {
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 20px;
-        margin: 0;
+        margin: 0 0 90px 0;
         padding: 0 20px;
     }
 
